--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -11,9 +11,11 @@
     "test": "cross-env CI=1 react-scripts test",
     "test:watch": "react-scripts test --watch",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
-    "circular-dependencies": "madge --circular src/*",
+    "circular": "madge --circular src/*",
     "code-coverage": "jest --collectCoverage",
     "build": "rollup -c",
+    "eslint": "eslint './{src,.storybook}/**/*.{js,jsx,ts,tsx}' --quiet",
+    "lint": "yarn run eslint && yarn run circular",
     "start": "rollup -c -w",
     "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
