--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -10,6 +10,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
+    "lint": "eslint './{src,cypress}/**/*.{js,jsx,ts,tsx}' --quiet",
     "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server:run http://localhost:4000 'cypress run'",
     "test:unit": "CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
