--- a/packages/discovery-react-components/.storybook/tsconfig.json
+++ b/packages/discovery-react-components/.storybook/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "isolatedModules": false
+    "isolatedModules": false,
+    "baseUrl": "../src"
   }
 }
