--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-storysource": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "5.3.0-beta.15",
+    "@storybook/addon-docs": "5.3.0-beta.15",
+    "@storybook/addon-knobs": "5.3.0-beta.15",
+    "@storybook/addon-storysource": "5.3.0-beta.15",
+    "@storybook/preset-create-react-app": "^1.3.2",
+    "@storybook/react": "5.3.0-beta.15",
+    "@storybook/source-loader": "5.3.0-beta.15",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@types/classnames": "^2.2.9",
     "@types/debounce": "^1.2.0",
     "@types/dompurify": "^0.0.33",
+    "@types/entities": "^1.1.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/lodash.deburr": "^4.1.6",
@@ -29,12 +32,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
-    "@types/storybook__addon-knobs": "^5.0.3",
-    "@types/storybook__react": "^4.0.2",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.1.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
@@ -65,7 +65,6 @@
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
-    "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^3.3.0",
     "rollup": "^1.20.2",
@@ -81,7 +80,7 @@
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3"
+    "typescript": "~3.6.2"
   },
   "scripts": {
     "lint": "eslint '{packages,examples}/**/*.{js,jsx,ts,tsx}' --ignore-pattern node_modules --quiet"
