--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
     "pdfjs-dist": "^2.2.228",
+    "react-error-boundary": "^1.2.5",
     "react-virtualized": "^9.21.1"
   }
 }
