feat: upgrade storybook to 5.3

--- a/packages/discovery-react-components/.storybook/tsconfig.json
+++ b/packages/discovery-react-components/.storybook/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    //https://github.com/storybookjs/storybook/issues/7829#issuecomment-561137500
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
+    "strictNullChecks": false,
     "isolatedModules": false,
     "baseUrl": "../src"
   }
