--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-storysource": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "5.3.0-beta.15",
+    "@storybook/addon-docs": "5.3.0-beta.15",
+    "@storybook/addon-knobs": "5.3.0-beta.15",
+    "@storybook/addon-storysource": "5.3.0-beta.15",
+    "@storybook/react": "5.3.0-beta.15",
+    "@storybook/source-loader": "5.3.0-beta.15",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
@@ -81,7 +82,7 @@
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3"
+    "typescript": "~3.6.2"
   },
   "scripts": {
     "lint": "eslint '{packages,examples}/**/*.{js,jsx,ts,tsx}' --ignore-pattern node_modules --quiet"
