--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@storybook/addon-actions": "5.3.0-beta.15",
-    "@storybook/addon-docs": "5.3.0-beta.15",
-    "@storybook/addon-knobs": "5.3.0-beta.15",
-    "@storybook/react": "5.3.0-beta.15",
-    "@storybook/source-loader": "5.3.0-beta.15",
+    "@storybook/addon-actions": "5.3.0-rc.0",
+    "@storybook/addon-docs": "5.3.0-rc.0",
+    "@storybook/addon-knobs": "5.3.0-rc.0",
+    "@storybook/react": "5.3.0-rc.0",
+    "@storybook/source-loader": "5.3.0-rc.0",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
