chore: hoist discovery-react-components devDependencies to root

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
+    "lorem-ipsum": "^2.0.3",
     "madge": "^3.6.0",
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
@@ -78,6 +79,7 @@
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.23.0",
     "rollup-plugin-url": "^2.2.2",
+    "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
