--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@rollup/plugin-json": "^4.0.1",
     "@storybook/addon-actions": "5.3.0-rc.0",
     "@storybook/addon-docs": "5.3.0-rc.0",
     "@storybook/addon-knobs": "5.3.0-rc.0",
@@ -72,7 +73,6 @@
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
