--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-url": "^4.0.0",
     "@storybook/addon-actions": "5.3.0-rc.0",
     "@storybook/addon-docs": "5.3.0-rc.0",
     "@storybook/addon-knobs": "5.3.0-rc.0",
@@ -77,7 +78,6 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.23.0",
-    "rollup-plugin-url": "^2.2.2",
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
