--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-url": "^4.0.0",
     "@storybook/addon-actions": "5.3.0-rc.0",
     "@storybook/addon-docs": "5.3.0-rc.0",
     "@storybook/addon-knobs": "5.3.0-rc.0",
@@ -71,14 +75,8 @@
     "react-scripts": "^3.3.0",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.23.0",
-    "rollup-plugin-url": "^2.2.2",
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
