--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/core": "^7.7.7",
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
@@ -71,7 +70,6 @@
     "react-dom": "^16.4.1",
     "react-scripts": "^3.3.0",
     "rollup": "^1.20.2",
-    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.23.0",
     "seedrandom": "^3.0.5",
