--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["./node_modules/react-scripts/node_modules/eslint-config-react-app/index.js"],
+  "extends": ["react-app"],
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error"
