--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "carbon-icons": "^7.0.7",
     "cross-env": "^5.1.4",
     "cypress": "3.2.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "fast-xml-parser": "^3.14.0",
