--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -33,8 +33,7 @@
     "ibm-watson": "5.2.0-alpha-1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^3.3.0"
+    "react-dom": "^16.4.1"
   },
   "browserslist": {
     "production": [
