--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
       "git add"
     ],
     "{packages,examples}/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
+      "eslint --resolve-plugins-relative-to './node_modules/react-scripts/node_modules' --fix",
       "git add"
     ]
   },
