docs: remove create react app steps and add env var examples

--- a/examples/discovery-search-app/.env
+++ b/examples/discovery-search-app/.env
@@ -1,2 +1,6 @@
 SASS_PATH=../../node_modules:src
-REACT_APP_PROJECT_ID=abcdef
+REACT_APP_PROJECT_ID=
+CLUSTER_USERNAME=
+CLUSTER_PASSWORD=
+CLUSTER_PORT=
+CLUSTER_HOST=
