--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@storybook/react": "5.3.0-rc.0",
     "@storybook/source-loader": "5.3.0-rc.0",
     "@svgr/rollup": "^4.3.2",
+    "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@types/classnames": "^2.2.9",
