fix: make sure REACT_APP_PROJECT_ID has a value

--- a/examples/discovery-search-app/.env
+++ b/examples/discovery-search-app/.env
@@ -1,5 +1,5 @@
 SASS_PATH=../../node_modules:src
-REACT_APP_PROJECT_ID=
+REACT_APP_PROJECT_ID=REPLACE_ME
 CLUSTER_USERNAME=
 CLUSTER_PASSWORD=
 CLUSTER_PORT=
