--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -21,10 +21,8 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@cypress/webpack-preprocessor": "^4.1.1",
     "@ibm-watson/discovery-react-components": "^1.1.0-beta.10",
     "@ibm-watson/discovery-styles": "^1.1.0-beta.5",
-    "@types/jest": "^24.0.25",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
@@ -35,8 +33,7 @@
     "ibm-watson": "5.2.0-alpha-1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "ts-loader": "^6.2.1"
+    "react-dom": "^16.4.1"
   },
   "browserslist": {
     "production": [
