--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "ts-loader": "^6.2.1",
     "typescript": "~3.6.2",
     "vue": "^2.6.11",
     "webpack": "4.41.2"
