chore: update facets tests & make default mocks override-able

--- a/examples/discovery-search-app/cypress/tsconfig.json
+++ b/examples/discovery-search-app/cypress/tsconfig.json
@@ -13,8 +13,8 @@
     "strict": true,
     "baseUrl": "../node_modules",
     "target": "es5",
-    "lib": ["es5", "dom", "dom.iterable", "esnext"],
-    "types": ["cypress"]
+    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext"],
+    "types": ["cypress", "@types/testing-library__cypress"]
   },
   "include": ["../node_modules/cypress", "**/*.ts"]
 }
