fix: add yarn resolution for cypress and fix a comment

--- a/package.json
+++ b/package.json
@@ -106,5 +106,8 @@
     "packages/*",
     "examples/*"
   ],
-  "dependencies": {}
+  "dependencies": {},
+  "resolutions": {
+    "cypress": "3.8.2"
+  }
 }
