--- a/examples/discovery-search-app/cypress/tsconfig.json
+++ b/examples/discovery-search-app/cypress/tsconfig.json
@@ -1,10 +1,20 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
     "strict": true,
     "baseUrl": "../node_modules",
     "target": "es5",
-    "lib": ["es5", "dom"],
+    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext"],
     "types": ["cypress", "@types/testing-library__cypress"]
   },
-  "include": ["**/*.ts", "support/index.js", "support/commands.js"]
+  "include": ["../node_modules/cypress", "**/*.ts"]
 }
