--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
