--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "@babel/runtime": "^7.5.5",
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
@@ -64,9 +66,10 @@
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
-    "react": "^16.4.1",
+    "react": "^16.12.0",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
+    "react-is": "^16.12.0",
     "react-scripts": "^3.3.0",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
