--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/classnames": "^2.2.9",
     "@types/debounce": "^1.2.0",
     "@types/dompurify": "^0.0.33",
@@ -65,6 +66,7 @@
     "react-dom": "^16.4.1",
     "react-is": "^16.12.0",
     "react-scripts": "^3.3.0",
+    "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.2",
     "rollup-plugin-string": "^3.0.0",
