--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "markdown-toc": "^1.2.0",
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
