--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -17,9 +17,9 @@
     "eslint": "eslint --resolve-plugins-relative-to '../../node_modules/react-scripts/node_modules' './{src,.storybook}/**/*.{js,jsx,ts,tsx}' --quiet",
     "lint": "yarn run eslint && yarn run circular",
     "start": "rollup -c -w",
-    "storybook": "SASS_PATH='../../node_modules' start-storybook --ci --port=9002",
-    "storybook:build": "SASS_PATH='../../node_modules' build-storybook",
-    "storybook:build:release": "SASS_PATH='../../node_modules' STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
+    "storybook": "start-storybook --ci --port=9002",
+    "storybook:build": "build-storybook",
+    "storybook:build:release": "STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
     "analyze": "source-map-explorer 'dist/index.js'",
     "prepublish": "yarn run build",
     "preversion": "yarn run storybook:build:release",
