fix: document highlighting misalignment
- Use `react-resize-detector` instead of `react-resize-observer`

Contributes to Watson-Discovery/docviz-squad-issue-tracker#249

--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
     "packages/*",
     "examples/*"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@types/react-resize-detector": "^4.2.0"
+  },
   "resolutions": {
     "cypress": "3.8.2"
   }
