--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
     "@types/storybook__addon-knobs": "^5.0.3",
