--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,14 @@
 {
-  "extends": ["./node_modules/react-scripts/node_modules/eslint-config-react-app/index.js"],
-  "plugins": ["prettier"],
+  "extends": [
+    "react-app",
+    "plugin:prettier/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:cypress/recommended"
+  ],
+  "plugins": ["react", "jsx-a11y", "prettier", "cypress"],
+  "env": {
+    "cypress/globals": true
+  },
   "rules": {
     "prettier/prettier": "error"
   }
