--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "cypress": "3.8.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
@@ -79,12 +81,12 @@
     "start-server-and-test": "^1.10.0",
     "ts-loader": "^6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "~3.6.2",
+    "typescript": "^3.8.2",
     "vue": "^2.6.11",
     "webpack": "4.41.2"
   },
   "scripts": {
-    "lint": "eslint --resolve-plugins-relative-to './node_modules/react-scripts/node_modules' '{packages,examples}/**/*.{js,jsx,ts,tsx}' --ignore-pattern node_modules --quiet"
+    "lint": " NODE_PATH=./node_modules/react-scripts/node_modules:./node_modules eslint '{packages,examples}/**/*.{js,jsx,ts,tsx}'"
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
