--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint '{packages,examples}/**/*.{js,jsx,ts,tsx}'"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.4",
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
@@ -19,12 +19,12 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-url": "^4.0.0",
-    "@storybook/addon-actions": "5.3.0-rc.0",
-    "@storybook/addon-docs": "5.3.0-rc.0",
-    "@storybook/addon-knobs": "5.3.0-rc.0",
-    "@storybook/core": "5.3.0-rc.0",
-    "@storybook/react": "5.3.0-rc.0",
-    "@storybook/source-loader": "5.3.0-rc.0",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-docs": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/core": "^5.3.14",
+    "@storybook/react": "^5.3.14",
+    "@storybook/source-loader": "^5.3.14",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^4.1.0",
@@ -42,8 +42,6 @@
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
-    "@types/storybook__addon-knobs": "^5.0.3",
-    "@types/storybook__react": "^4.0.2",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
@@ -56,13 +54,13 @@
     "cross-env": "^5.1.4",
     "cypress": "3.8.2",
     "eslint": "6.x",
-    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-flowtype": "4.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
     "fast-xml-parser": "^3.14.0",
@@ -78,14 +76,14 @@
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
     "node-sass-tilde-importer": "^1.0.2",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-is": "^16.12.0",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.2",
