chore: conver `.x` style dep versions to numbers
... for consistency with rest of file

--- a/package.json
+++ b/package.json
@@ -43,26 +43,26 @@
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
     "@types/uuid": "^3.4.5",
-    "@typescript-eslint/eslint-plugin": "2.x",
-    "@typescript-eslint/parser": "2.x",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-eslint": "10.x",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
     "cross-env": "^5.1.4",
     "cypress": "3.8.2",
-    "eslint": "6.x",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-flowtype": "4.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "2.x",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
