--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "examples/*"
   ],
   "scripts": {
-    "lint": "eslint '{packages,examples}/**/*.{js,jsx,ts,tsx}' --quiet"
+    "lint": "wsrun -m -e -c lint"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -96,7 +96,8 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.2",
     "vue": "^2.6.11",
-    "webpack": "4.41.2"
+    "webpack": "4.41.2",
+    "wsrun": "^5.2.0"
   },
   "resolutions": {
     "cypress": "3.8.2"
