--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
+  "scripts": {
+    "lint": "wsrun -m -e -c lint"
+  },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.4",
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
@@ -12,12 +19,12 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-url": "^4.0.0",
-    "@storybook/addon-actions": "5.3.0-rc.0",
-    "@storybook/addon-docs": "5.3.0-rc.0",
-    "@storybook/addon-knobs": "5.3.0-rc.0",
-    "@storybook/core": "5.3.0-rc.0",
-    "@storybook/react": "5.3.0-rc.0",
-    "@storybook/source-loader": "5.3.0-rc.0",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-docs": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/core": "^5.3.14",
+    "@storybook/react": "^5.3.14",
+    "@storybook/source-loader": "^5.3.14",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^4.1.0",
@@ -35,10 +42,11 @@
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
-    "@types/storybook__addon-knobs": "^5.0.3",
-    "@types/storybook__react": "^4.0.2",
     "@types/uuid": "^3.4.5",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
@@ -46,8 +54,15 @@
     "cross-env": "^5.1.4",
     "cypress": "3.8.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.2.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
@@ -61,14 +76,14 @@
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
     "node-sass-tilde-importer": "^1.0.2",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-is": "^16.12.0",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.2",
@@ -79,12 +94,13 @@
     "start-server-and-test": "^1.10.0",
     "ts-loader": "^6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "~3.6.2",
+    "typescript": "^3.8.2",
     "vue": "^2.6.11",
-    "webpack": "4.41.2"
+    "webpack": "4.41.2",
+    "wsrun": "^5.2.0"
   },
-  "scripts": {
-    "lint": "eslint --resolve-plugins-relative-to './node_modules/react-scripts/node_modules' '{packages,examples}/**/*.{js,jsx,ts,tsx}' --ignore-pattern node_modules --quiet"
+  "resolutions": {
+    "cypress": "3.8.2"
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
@@ -92,7 +108,7 @@
       "git add"
     ],
     "{packages,examples}/**/*.{js,jsx,ts,tsx}": [
-      "eslint --resolve-plugins-relative-to './node_modules/react-scripts/node_modules' --fix",
+      "yarn lint --fix",
       "git add"
     ],
     "README.md": [
@@ -106,13 +122,5 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "post-rewrite": "lint-staged"
     }
-  },
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ],
-  "dependencies": {},
-  "resolutions": {
-    "cypress": "3.8.2"
   }
 }
