--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -56,7 +56,8 @@
     "pdfjs-dist": "^2.2.228",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
-    "react-virtualized": "^9.21.1"
+    "react-virtualized": "^9.21.1",
+    "sbd": "^1.0.16"
   },
   "jest": {
     "transformIgnorePatterns": [
