--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -53,8 +53,8 @@
     "htmlparser2": "^4.0.0",
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
-    "pdfjs-dist": "^2.2.228",
     "react-error-boundary": "^1.2.5",
+    "react-pdf": "^4.1.0",
     "react-resize-detector": "^4.2.1",
     "react-virtualized": "^9.21.1"
   },
