--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @maniax89 @noah-eigenfeld @kabeaty @Steven-Gassert @ChrisGillin @jhpedemonte @ColbyJohnIBM
+* @maniax89 @noah-eigenfeld @kabeaty @Steven-Gassert @ChrisGillin @jhpedemonte @ColbyJohnIBM @broulaye
 
 /packages/discovery-components-react/src/components/DocumentPreview/ @JuanNicolasGarcia @broulaye @anibapat
 /packages/discovery-components-react/src/components/CIDocument/ @JuanNicolasGarcia @broulaye @anibapat
