fix: update deps to remove warnings and `resolution` directive

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@storybook/react": "^5.3.14",
     "@storybook/source-loader": "^5.3.14",
     "@svgr/rollup": "^4.3.2",
-    "@testing-library/cypress": "^5.0.2",
+    "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@testing-library/react-hooks": "^3.2.1",
@@ -57,12 +57,12 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-flowtype": "3.x",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.4.0",
+    "eslint-plugin-react-hooks": "1.x",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
@@ -98,9 +98,6 @@
     "vue": "^2.6.11",
     "webpack": "4.41.2",
     "wsrun": "^5.2.0"
-  },
-  "resolutions": {
-    "cypress": "4.6.0"
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
