fix: revert some packages that seem to have breaking changes

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@storybook/react": "^5.3.14",
     "@storybook/source-loader": "^5.3.14",
     "@svgr/rollup": "^4.3.2",
-    "@testing-library/cypress": "^6.0.0",
+    "@testing-library/cypress": "5.3.1",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@testing-library/react-hooks": "^3.2.1",
@@ -52,7 +52,7 @@
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
     "cross-env": "^5.1.4",
-    "cypress": "^4.6.0",
+    "cypress": "4.5.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
