--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "webpack": "4.41.2",
     "wsrun": "^5.2.0"
   },
+  "resolutions": {
+    "cypress": "4.4.0"
+  },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
       "prettier --write",
