--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
+    "concurrently": "^5.2.0",
     "cross-env": "^5.1.4",
     "cypress": "4.4.0",
     "eslint": "^6.8.0",
