--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -12,7 +12,7 @@
     "start:client": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "start": "concurrently -n 'SERVER,CLIENT' -c 'blue,green' \"yarn run server:run\" \"yarn run start:client\" -k",
     "lint": "eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
-    "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server:run http://localhost:4000 'cypress run'",
+    "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:3000 start-server-and-test start:client http://localhost:3000 'cypress run'",
     "test:unit": "SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
     "cypress": "cypress open",
