--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -7,12 +7,12 @@
   "author": "IBM Corp.",
   "homepage": ".",
   "scripts": {
-    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "eject": "SKIP_PREFLIGHT_CHECK=true react-scripts eject",
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
+    "eject": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts eject",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "lint": "eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
-    "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server:run http://localhost:4000 'cypress run'",
-    "test:unit": "SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
+    "test:e2e": "cross-env BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server:run http://localhost:4000 'cypress run'",
+    "test:unit": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
     "cypress": "cypress open",
     "server": "yarn server:setup && yarn server:run",
