feat: script that starts client AND server for example app (#141)
* feat: added a script that starts client AND server for example app

* fix: readme typo

* Revert "fix: readme typo"

This reverts commit f4b174cc16b9c281f47e3933ab9869f93767c795.

* fix: typo -- and nothing else hopefully

* fix: tell the user to create the correct file

* feat: use concurrently to start server and client

* feat: throw error if env files not found

* docs: document script changes in README

* test: only start client for cypress tests

* test: attempt to fix breaking test

* test: try to fix broken test, round 2

* test: remove .only from test

* test: make test less picky

* test: still debugging -- try moving click to describe

* test: restore accidentally deleted line

* test: try adding a big ole timeout on problem click

* test: try moving timeout to click and forcing true

* test: try just force true on button click

* chore: yarn.lock updates

* chore: cross-env version update

* chore: add CYPRESS_MODE var, update start and test scripts

* chore: editor thinks it knows best

* chore: newlines are wily

--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -11,10 +11,10 @@
     "eject": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts eject",
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "lint": "eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
-    "test:e2e": "cross-env BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server:run http://localhost:4000 'cypress run'",
+    "test:e2e": "cross-env CYPRESS_MODE=true BROWSER=none CYPRESS_baseUrl=http://localhost:3000 start-server-and-test start http://localhost:3000 'cypress run'",
     "test:unit": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
-    "cypress": "cypress open",
+    "cypress": "cross-env CYPRESS_MODE=true cypress open",
     "server": "yarn server:setup && yarn server:run",
     "server:run": "node ./server.js",
     "server:setup": "./scripts/serverSetup.sh"
