ci: add audit as part of build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ branches:
     - /^hotfix\/.*/
 script:
   - yarn lint
+  - yarn audit
   - lerna run build
   - lerna run storybook:build
   - lerna run test
