--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "examples/*"
   ],
   "scripts": {
-    "lint": "wsrun -m -e -c lint"
+    "lint": "wsrun -m -e -c lint",
+    "audit": "wsrun -m -e -c audit"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -45,6 +46,7 @@
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
+    "audit-ci": "^3.1.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
