fix: facet selection state lost after results previewed (#165)
* feat: preserve facet selection after preview with test

* fix: dont set search params on filter; update comment

* fix: facet alignment

* fix: use isReturningDocumentPreview state

* fix: add back in removed comment

* fix: set document previewed when result clicked instead

* fix: typo

* fix: rename to returning from result preview

* fix: move fetchAggregationState to discoverysearch

* test: update tests

* fix: add enum for fetchaggregationstates

* test: update tests

* fix: set fetchaggstate to init not null for default

* fix: switch to use globalaggregationsstore

* fix: remove unused enum

* fix: remove aggresults and fix overrideaggresults

* chore: remove yarn audit for now

* fix: keeps name as fetchAggregations

* fix: overrideaggresults check update

* fix: try lerna with parallel

* test: dont wait for postQuery

* chore: try travis_wait

* fix: cypress tests remove extra query waits

* fix: remove extra postQuery in basic cypress spec too

* fix: disable cypress videos

* fix: turn off cypress video compression too

* fix: wait on query posts in tables test

* fix: wait on postquery on homepage

* fix: refactor cypress tables test to one flow

* fix: refactor cypress basic test to one flow

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,9 @@ branches:
     - /^hotfix\/.*/
 script:
   - yarn lint
-  - yarn audit
   - lerna run build
   - lerna run storybook:build
-  - lerna run test
+  - travis_wait lerna run test
 before_deploy:
   - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
   - git config --global push.default simple
